# suas-23-24

./: .coverage  .gitignore  Dockerfile  Dockerfile-jetson  Jenkinsfile  Makefile  README.md  docker-compose.yml  docker-desktop-4.24.0-amd64.deb:Zone.Identifier  jetson-startup.sh  sys_check.py
.github/workflows/: docker-check.yml  lint.yml
flight/: README.md  example_mission.py  main.py  mission_basic.py  requirements.txt  run_sim.sh
flight/examples/: arm_procedure.py  gphoto.py  read_shared_img.py
flight/examples/camera/: camera.py  vision.py
flight/examples/gazebo_camera/: camera.py  (+1 more)
flight/examples/gphoto2_cpp/: CMakeLists.txt  number.txt  takephoto
flight/examples/gphoto2_cpp/src/: main.cpp
flight/setup/: gazebo_install.sh  ubuntu_ardupilot_install.sh
flight/src/: airdrop_fences.txt  errors.py  mission_fences.txt
gcs/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
gcs/src/: app.html  stores.ts  types.ts
generator/: generate_events.py
grafana/: config.ini  datasource.yaml
grafana/dashboards/: dashboard.json  default.json  example.json
prometheus/: config.yml
vision/: Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  requirements.txt  start_gunicorn.sh  test.py  ultralytics-reqs.txt  util.py  vision_test.py
vision/html/: index.html
vision/odlc/: alphanumeric_pipeline.py  color.py  color2.py  detection_locator.py  detector.py  matching.py  shape_color_classes.txt  shape_color_detection.py  trt_common.py
vision/websockets/: README.md  connection_test.py  server.py
(+9 files in other folders)
